fixed tutorial video text alignment

--- a/assets/css/free-resources.css
+++ b/assets/css/free-resources.css
@@ -623,4 +623,8 @@ body::before {
     margin-left: auto;
     margin-right: auto;
   }
+
+  .youtube-heading-box {
+    margin-left: 6%;
+  }
 }
